[package]
name = "ap_sc_notifier"
version = "1.0.0"
edition = "2021"

[dependencies]
crossbeam-channel = "0.5.14"
wg_2024 = { git = "https://github.com/WGL-2024/WGL_repo_2024.git", features = ["serialize","debug"] }
log = "0.4.22"
messages = { git = "https://github.com/The-Null-Pointer-Patrol/messages.git"}